integration 'InscriptionModal' à EventPage

--- a/frontend/src/assets/sass/variables.scss
+++ b/frontend/src/assets/sass/variables.scss
@@ -6,3 +6,6 @@ $accentColor2: #6FD7DE;
 
 $shadow: 0px 2px 4px 0px rgba($darkColor, .25);
 $containerRadius: 15px;
+
+$breakpointTablet: 750px;
+$breakpointDesktop: 1140px;
