--- a/frontend/src/assets/sass/variables.scss
+++ b/frontend/src/assets/sass/variables.scss
@@ -2,7 +2,7 @@ $darkColor: #181818;
 $lightColor: #f7f7f7;
 $ultraLightColor: #ffffff;
 $accentColor1: #EE90D9;
-$accentColor2: #6FD7DE;
+$accentColor2: #03e3f3;
 
 $shadow: 0px 2px 4px 0px rgba($darkColor, .25);
 $containerRadius: 15px;
