--- a/frontend/src/assets/sass/variables.scss
+++ b/frontend/src/assets/sass/variables.scss
@@ -1,13 +1,18 @@
+// couleurs
+
 $darkColor: #181818;
 $darkColorBackOf: #0E1021;
 $lightColor: #f7f7f7;
 $ultraLightColor: #ffffff;
 $accentColor1: #EE90D9;
 $accentColor2: #03e3f3;
+$accentColorBackof: #22264e;
 $errorColor: red;
 
+// effets
 $shadow: 0px 2px 4px 0px rgba($darkColor, .25);
 $containerRadius: 15px;
 
+// media queries
 $breakpointTablet: 750px;
 $breakpointDesktop: 1140px;
