developpement BackOfficeHomepage - cration composant BackOfficeEventCard

--- a/frontend/src/assets/sass/variables.scss
+++ b/frontend/src/assets/sass/variables.scss
@@ -7,6 +7,7 @@ $ultraLightColor: #ffffff;
 $accentColor1: #EE90D9;
 $accentColor2: #03e3f3;
 $accentColorBackof: #22264e;
+$accentColorBackof2: #5a63c7;
 $errorColor: red;
 
 // effets
