--- a/frontend/src/assets/sass/variables.scss
+++ b/frontend/src/assets/sass/variables.scss
@@ -14,6 +14,9 @@ $errorColor: red;
 $shadow: 0px 2px 4px 0px rgba($darkColor, .25);
 $containerRadius: 15px;
 
+// tailles
+$contentMaxWidth: 102rem;
+
 // media queries
 $breakpointTablet: 750px;
 $breakpointDesktop: 1140px;
