Ajout Navigation back-office 'BackOfficeNavAside'

--- a/frontend/src/assets/sass/variables.scss
+++ b/frontend/src/assets/sass/variables.scss
@@ -1,13 +1,15 @@
 // couleurs
 
 $darkColor: #181818;
-$darkColorBackOf: #0E1021;
+$darkColorBackOf: #29313D;
 $lightColor: #f7f7f7;
 $ultraLightColor: #ffffff;
 $accentColor1: #EE90D9;
 $accentColor2: #03e3f3;
 $accentColorBackof: #22264e;
-$accentColorBackof2: #5a63c7;
+$accentColorBackof2: #A78AE4;
+$accentColorBackof3: #4B4F64;
+$accentColorBackof4: #17181F;
 $errorColor: red;
 
 // effets
