Ajout LogoutModal style et systeme ouv/ferm OK

--- a/frontend/src/assets/sass/variables.scss
+++ b/frontend/src/assets/sass/variables.scss
@@ -10,7 +10,7 @@ $accentColorBackof: #22264e;
 $accentColorBackof2: #A78AE4;
 $accentColorBackof3: #4B4F64;
 $accentColorBackof4: #17181F;
-$errorColor: red;
+$errorColor: rgb(238, 21, 21);
 
 // effets
 $shadow: 0px 2px 4px 0px rgba($darkColor, .25);
