Inscription administrateur ok

--- a/frontend/src/assets/sass/variables.scss
+++ b/frontend/src/assets/sass/variables.scss
@@ -11,6 +11,7 @@ $accentColorBackof2: #A78AE4;
 $accentColorBackof3: #4B4F64;
 $accentColorBackof4: #17181F;
 $errorColor: rgb(238, 21, 21);
+$validColor: rgb(98, 167, 98);
 
 // effets
 $shadow: 0px 2px 4px 0px rgba($darkColor, .25);
