--- a/frontend/src/assets/sass/mixins.scss
+++ b/frontend/src/assets/sass/mixins.scss
@@ -30,3 +30,21 @@
     align-self: center;
     margin-top: 3rem;
 }
+
+@mixin headersBasicSettings {
+    background: $ultraLightColor;
+    box-shadow: $shadow;
+    padding: 1rem 3rem;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    position: sticky;
+    top: 0;
+    z-index: 99;
+}
+
+@mixin pageTitlesBasicSettings {
+    margin: 0;
+    font-size: 2rem;
+    color: $darkColor;
+}
