modif accentColor boutons EventPage

--- a/frontend/src/assets/sass/mixins.scss
+++ b/frontend/src/assets/sass/mixins.scss
@@ -8,7 +8,7 @@
     cursor: pointer;
 
     &:hover {
-        background: rgba($accentColor2, .8);
+        background: $accentColor1;
     }
 
     p {
