--- a/frontend/src/assets/sass/adminPagesStyle.scss
+++ b/frontend/src/assets/sass/adminPagesStyle.scss
@@ -5,7 +5,7 @@
 
     .adminOperations_container {
         width: 100%;
-        padding: 2rem 1rem;
+        padding: 1rem 1rem 3rem 1rem;
 
         .adminOperations {
             background: $ultraLightColor;
