--- a/frontend/src/assets/sass/variables.scss
+++ b/frontend/src/assets/sass/variables.scss
@@ -12,6 +12,9 @@ $accentColorBackof3: #4B4F64;
 $accentColorBackof4: #17181F;
 $errorColor: rgb(238, 21, 21);
 $validColor: rgb(98, 167, 98);
+$secondaryButtonColor: #89949e;
+
+$overlayTransparencyColor: rgba($darkColor, .5);
 
 // effets
 $shadow: 0px 2px 4px 0px rgba($darkColor, .25);
