--- a/frontend/src/assets/sass/mixins.scss
+++ b/frontend/src/assets/sass/mixins.scss
@@ -21,6 +21,7 @@
 
 @mixin backOfficeButtonStyle {
     font-size: 1rem;
+    font-weight: 600;
     padding: .6rem 1.1rem;
     border: none;
     color: $ultraLightColor;
