Maj sass body des pages backOffice

--- a/frontend/src/assets/sass/adminPagesStyle.scss
+++ b/frontend/src/assets/sass/adminPagesStyle.scss
@@ -1,7 +1,9 @@
 @import '@/assets/sass/variables.scss';
 @import '@/assets/sass/varMediaQueries.scss';
+@import '@/assets/sass/mixins.scss';
 
 .backOfficeAdminPage {
+    @include backOfficePageStyle;
 
     .adminOperations_container {
         width: 100%;
