--- a/frontend/src/assets/sass/mixins.scss
+++ b/frontend/src/assets/sass/mixins.scss
@@ -28,7 +28,7 @@
 
 @mixin backOfficeButtonStyle {
     font-size: 1rem;
-    font-weight: 600;
+    font-weigh: 600;
     padding: .6rem 1.1rem;
     border: none;
     color: $ultraLightColor;
