--- a/frontend/src/assets/sass/backOfficeModalStyle.scss
+++ b/frontend/src/assets/sass/backOfficeModalStyle.scss
@@ -25,6 +25,7 @@
         padding: 1rem;
         margin: 1rem;
         gap: 1rem;
+        position: relative;
 
         .head-part {
             display: flex;
@@ -57,13 +58,26 @@
         .alertMessage {
             margin: 0;
             font-size: .95rem;
-            text-align: justify;
+            text-align: left;
         }
         .buttons_container {
             display: flex;
             align-items: center;
             justify-content: end;
             gap: 1rem;
+        }
+
+        .closeIcon {
+            position: absolute;
+            top: .5rem;
+            right: .5rem;
+            font-size: 1.6rem;
+            opacity: .5;
+            cursor: pointer;
+
+            &:hover {
+                opacity: .8;
+            }
         }
     }
 }
