Ajout scss variables Maj composants avec nouvelle variable

--- a/frontend/src/assets/sass/variables.scss
+++ b/frontend/src/assets/sass/variables.scss
@@ -18,6 +18,7 @@ $overlayTransparencyColor: rgba($darkColor, .5);
 
 // effets
 $shadow: 0px 2px 4px 0px rgba($darkColor, .25);
+$containerShadow: 0px 3px 10px 0px rgba($darkColor, .2);
 $containerRadius: 15px;
 
 // tailles
