--- a/frontend/src/assets/sass/adminPagesStyle.scss
+++ b/frontend/src/assets/sass/adminPagesStyle.scss
@@ -11,7 +11,7 @@
 
         .adminOperations {
             background: $ultraLightColor;
-            box-shadow: $shadow;
+            box-shadow: $containerShadow;
             border-radiuS: $containerRadius;
             padding: 2rem;
             display: flex;
