--- a/frontend/src/assets/sass/mixins.scss
+++ b/frontend/src/assets/sass/mixins.scss
@@ -21,7 +21,7 @@
 
 @mixin backOfficePageStyle {
     min-height: 100vh;
-    color: $darkColor;
+    color: $darkColorBackOf;
     background: $lightColor;
 }
 
