--- a/frontend/src/assets/sass/variables.scss
+++ b/frontend/src/assets/sass/variables.scss
@@ -8,6 +8,7 @@ $accentColor1: #EE90D9;
 $accentColor2: #03e3f3;
 $accentColorBackof: #22264e;
 $accentColorBackof2: #A78AE4;
+$accentColorBackof2Lighted: #b899fb;
 $accentColorBackof3: #4B4F64;
 $accentColorBackof4: #17181F;
 $errorColor: rgb(238, 21, 21);
