Maj condition BOEventSearchBar Ajout icone de fermeture

--- a/frontend/src/assets/sass/variables.scss
+++ b/frontend/src/assets/sass/variables.scss
@@ -14,6 +14,7 @@ $accentColorBackof4: #17181F;
 $errorColor: rgb(238, 21, 21);
 $validColor: rgb(98, 167, 98);
 $secondaryButtonColor: #89949e;
+$secondaryButtonColorLighted: #a8b4c0;
 
 $overlayTransparencyColor: rgba($darkColor, .5);
 
