--- a/frontend/src/assets/sass/backOfficeEventHandlingPageStyle.scss
+++ b/frontend/src/assets/sass/backOfficeEventHandlingPageStyle.scss
@@ -46,8 +46,9 @@
 
                     .sectionTitle_container {
                         display: flex;
+                        flex-wrap: wrap;
                         align-items: baseline;
-                        gap: 1rem;
+                        gap: .5rem;
 
                         .sectionTitle {
                             margin: 0;
@@ -102,7 +103,8 @@
                     &-section {
 
                         .sectionTitle_container {
-                            
+                            flex-wrap: unset;
+                            gap: 1rem;
                             .sectionTitle {
                                 white-space: nowrap;
                             }
