--- a/frontend/src/assets/sass/adminPagesStyle.scss
+++ b/frontend/src/assets/sass/adminPagesStyle.scss
@@ -24,8 +24,9 @@
 
                 .sectionTitle_container {
                     display: flex;
+                    flex-wrap: wrap;
                     align-items: baseline;
-                    gap: 1rem;
+                    gap: .5rem;
 
                     .sectionTitle {
                         margin: 0;
@@ -63,7 +64,8 @@
                 &-section {
     
                     .sectionTitle_container {
-    
+                        flex-wrap: unset;
+                        gap: 1rem;
                         .sectionTitle {
                             white-space: nowrap;
                         }
