--- a/frontend/src/assets/sass/backOfficeEventHandlingPageStyle.scss
+++ b/frontend/src/assets/sass/backOfficeEventHandlingPageStyle.scss
@@ -56,7 +56,7 @@
                             font-weight: 700;
                         }
                     }
-                    .eventHandlingForm {
+                    .eventForm {
                         @include adminForm;
                     }
 
