--- a/frontend/src/assets/sass/backOfficeEventHandlingFormStyle.scss
+++ b/frontend/src/assets/sass/backOfficeEventHandlingFormStyle.scss
@@ -94,12 +94,12 @@
                         object-fit: cover;
                     }
 
-                    .trashIcon_container {
+                    .removeIcon_container {
                         position: absolute;
                         top: .5rem;
                         right: .5rem;
-                        width: 3rem;
-                        height: 3rem;
+                        width: 2rem;
+                        height: 2rem;
                         background: $accentColorBackof4;
                         border-radius: 100%;
                         border: solid 2px $accentColorBackof2;
@@ -112,9 +112,9 @@
                             background: $accentColorBackof2;
                         }
 
-                        .trashIcon {
+                        .removeIcon {
                             color: $lightColor;
-                            font-size: 1.5rem;
+                            font-size: 1rem;
                         }
                     }
                 }
@@ -150,7 +150,7 @@
 
                     .coverImagePreview_container, .organizerLogoPreview_container {
 
-                        .trashIcon_container {
+                        .removeIcon_container {
                             top: 1rem;
                             right: 1rem;
                         }
